# WeekendRendering

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
src/: CMakeLists.txt  main.cpp
src/rendering/: CMakeLists.txt  render_api.cpp  render_api.hpp  window.cpp  window.hpp
src/rendering/vulkan/: CMakeLists.txt  vulkan_api.cpp  vulkan_api.hpp
test/: CMakeLists.txt
