cmake_minimum_required(VERSION 3.2)

set(CMAKE_EXPORT_COMPILE_COMMANDS true)

project(weekend_rendering)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++20")

set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})

set(WEEKEND_RENDERING_INSTALL_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
set(WEEKEND_RENDERING_INSTALL_BIN_DIR ${PROJECT_SOURCE_DIR}/bin)
set(WEEKEND_RENDERING_INSTALL_LIB_DIR ${PROJECT_SOURCE_DIR}/lib)

set(WEEKEND_RENDERING_HEADERS_DIR ${PROJECT_SOURCE_DIR}/src/weekend_rendering)

include_directories(${WEEKEND_RENDERING_INSTALL_INCLUDE_DIR})
include_directories(${WEEKEND_RENDERING_HEADERS_DIR})

add_subdirectory(src)
add_subdirectory(test)


